--- a/agile-reproducibility-reviews.Rmd
+++ b/agile-reproducibility-reviews.Rmd
@@ -36,6 +36,7 @@ library("tidyr")
 library("ggplot2")
 library("httr")
 library("glue")
+library("tabulizer")
 ```
 
 ```{r seed, echo=FALSE}
@@ -58,7 +59,7 @@ cr_path <- here::here("camera-ready-full-papers")
 
 ```{r easychair_login}
 if(is.na(Sys.getenv("easychair_username", unset = NA)) || is.na(Sys.getenv("easychair_password", unset = NA))) {
-  stop("Provide login details for EasyChair (e.g., in a file `.Renviron`) in environment variables",
+  stop("Provide login details for EasyChair (e.g., in a file `.Renviron` - make sure to adjust read persmissions so that no user but you/root may access the file!) in environment variables",
        "`easychair_username` and `easychair_password`")
 }
 
@@ -79,15 +80,26 @@ Retrieve all information about submissions from the EasyChair submissions system
 The full submission information is not included in the public rendering of this report.
 Make sure that the shown columns in the submission table include the colums required in the code below.
 
+```{r conference_id}
+conference_id <- "28425498"
+```
+
+
 ```{r submissions, echo=FALSE}
-submission_page <- httr::GET(url = "https://easychair.org/conferences/submissions?a=26091618")
+submission_page <- httr::GET(url = paste0("https://easychair.org/conferences/submissions?a=", conference_id))
 submission_html <- xml2::read_html(submission_page)
 submission_table_full <- html_node(submission_html, "#ec\\:table1")
 # remove first header row and set names manually later, because the vertical table headers are miages anyway
 xml_remove(xml_child(html_node(submission_table_full, "thead")))
 submission_table <- rvest::html_table(x = submission_table_full,
                                       fill = TRUE)
-names(submission_table) <- c("id", "authors", "title", "information", "paper", "assigment", "update", "type", "time", "decision")
+names(submission_table) <- c("id", "authors", "title", "information", "paper", "assigment", "update", 
+                             #"type",
+                             "time"
+                             ,"decision"
+                             )
+# manually add type, short papers submissions come later
+submission_table$type <- "Full-paper submission"
 submission_table$id <- str_pad(submission_table$id, width = 3, side = "left", pad = "0")
 submission_table <- submission_table  %>%
   mutate_if(is.character, list(~na_if(.,"")))
@@ -97,15 +109,12 @@ submission_table$information <- paste("https://easychair.org",
                                       links[str_detect(links, pattern = "submission_view")], sep = "")
 
 submission_table$submission_id <- str_match(submission_table$information, pattern = "submission=([[:digit:]]+)")[,2]
-# FIXME no. 033 has no file
-#submission_table$paper <- R.utils::insert(paste("https://easychair.org",
-#                                                links[str_detect(links, pattern = "download")],
-#                                                sep = ""),
-#                                          ats = which(submission_table$id == "033"),
-#                                         values = NA)
 submission_table$paper <- paste("https://easychair.org",
                                 links[str_detect(links, pattern = "download")],
                                 sep = "")
+
+# 1 and 2 are tests
+submission_table <- submission_table[3:nrow(submission_table),]
 
 submission_table %>%
   group_by(type) %>%
@@ -163,7 +172,7 @@ for (i in 1:nrow(submission_table)) {
   #cat("Reading ", current$file, "\n")
   the_text <- NA
   if(!is.na(current$file)) {
-    the_text <- pdf_text(current$file)
+    the_text <- tabulizer::extract_text(current$file)
     the_text <- str_c(the_text, collapse = TRUE)
   }
   
@@ -174,12 +183,13 @@ for (i in 1:nrow(submission_table)) {
 pages <- lapply(submission_table$file, function(f) {
   if(is.na(f))
     NA
-  else pdf_info(f)$pages
+  else pdftools::pdf_info(f)$pages
 })
 
 tidy_texts <- tibble(id = submission_table$id,
                      path = submission_table$file,
                      type = submission_table$type,
+                     submission_table$type,
                      text = unlist(texts),
                      pages = pages)
 
@@ -224,7 +234,7 @@ total_words = nrow(all_words)
 after_cleanup = nrow(no_stop_words)
 ```
 
-About `r round(after_cleanup/total_words * 100)`&nbsp;% of the words are considered stop words.
+About `r round(after_cleanup/total_words * 100, digits = 0)`&nbsp;% of the words are considered stop words.
 
 The following table shows how many words and non-stop words each document has, sorted by number of non-stop words.
 The `id` is built from the file name plus a prefix:
@@ -244,9 +254,10 @@ words_per_doc <- all_words %>%
 type_counts_totals <- submission_table %>%
   group_by(type) %>%
   tally()
-type_counts_totals$type <- c("Full-paper submission",
-                             "Poster submission",
-                             "Short-paper submission")
+type_counts_totals$type <- c("Full-paper submission"
+                             #, "Poster submission"
+                             #, "Short-paper submission"
+                             )
 type_counts_totals <- paste(
   paste(type_counts_totals$type, type_counts_totals$n, sep = ":"),
   collapse = "|")
@@ -687,7 +698,6 @@ readr::write_csv(review_files %>%
 
 ```{r reviewer_comments, echo=FALSE}
 # get review contents for each paper
-conference_id <- "26091618"
 
 # Example page: https://easychair.org/conferences/submission_reviews?a=26091618;submission=5333543
 retrieve_review <- function(id, submission_id) {
@@ -771,9 +781,6 @@ for(i in c(1:nrow(review_files))) {
 #### Author contacts
 
 ```{r author_contacts, echo=FALSE}
-# get review contents for each paper
-conference_id <- "26091618"
-
 # Example page: https://easychair.org/conferences/submission_view?a=26091618;submission=5333543
 retrieve_authors <- function(id, submission_id, authors, title) {
   url <- parse_url("https://easychair.org/conferences/submission_view")
