--- a/agile-reproducibility-reviews.Rmd
+++ b/agile-reproducibility-reviews.Rmd
@@ -866,6 +866,7 @@ if (params$private_info) {
 3. Go to the [Discoure forum discussion for reproducibility reviewers](https://discourse.agile-online.org/c/repro-review-2022/8) and find your assignments
 4. Conduct your reproducibility review and write the report
     - Don't forget to take a look at the scientific reviews for comments on reproducibility; do _not_ worry about the science or read the full paper, unless it really interests you
+    - Check the authors and their affiliations of the submission - is there a relation (e.g., former colleague, current supervisor) that may be seen as inappropriate for you as a reproducibility reviewer? Is there a conflict of interest? If so, please contact the reproducibility chair, and ask in the Discourse forum if another reproducibility reviewer would be available to switch assignments
     - If code is available on GitHub/Lab, please fork the project into the [Reproducible AGILE organisation](https://github.com/reproducible-agile/) respectively the [GitLab subgroup "reviews"](https://gitlab.com/reproducible-agile/reviews) and immediately "archive" the project so that it becomes read-only ([instructions GitHub](https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-archiving-repositories), [instructions for GitLab](https://docs.gitlab.com/ee/user/project/settings/#archiving-a-project)); ask Daniel to get the permissions for the organisations
     - If need be, limit the review scope, e.g. reproduce only a specific figure; the reproducibility review should not take you longer (not counting computation time) than a scientific review, and even computation times should not expand longer than a working day
 5. Send the report to the original authors of the paper and add the reproducibility chair in CC, see template below;
@@ -994,13 +995,6 @@ sessionInfo()
 ```
 
 **The used MRAN snapshot is `r paste(options("repos"))`**.
-
-```{r render_private_version, eval=FALSE, include=FALSE}
-# use render command to get to Google authentication
-rmarkdown::render(input = "agile-reproducibility-reviews.Rmd",
-                  params = list(private_info = TRUE),
-                  output_format = rmarkdown::html_document(toc = TRUE, self_contained = FALSE))
-```
 
 ```{r upload_to_drive, eval=FALSE, include=FALSE}
 # upload the HTML file and source code to the Reproducibility Committee shared folder
